Scrollbar fixes en font

--- a/portfolio.css
+++ b/portfolio.css
@@ -5,10 +5,10 @@ body {
 
 /* grijs: #575756; */
 
-@font-face {
-    font-family: "tallfilms";
-    src: url(tallfilms.ttf);
-}
+/*@font-face {
+    font-family: "roundmarker";
+    src: url(roundmarker.otf);
+}*/
 
 
 nav {
@@ -17,6 +17,7 @@ nav {
 	margin-top: 5em;
 	float: right;
 	overflow: auto;
+	/*border: 1px solid red;*/
 }
 
 .scrollclassnav {
@@ -29,7 +30,8 @@ nav {
 
 nav a {
 	text-decoration: none;
-	font: 2em "tallfilms";
+	font: 2em "PT Sans narrow";
+	font-weight: bold;
 	color: #36A9E0;
 	padding: 0em 0.5em 0em 0.5em;
 	text-transform: uppercase;
@@ -78,6 +80,10 @@ header img{
 
 #logo {
 	width: 15%;
+}
+
+.center {
+	text-align:center;
 }
 
 /* https://css-tricks.com/seamless-responsive-photo-grid/ */
